@@ -69,13 +69,28 @@
           </div>
         </div>
         <div class="hero-card">
-          <a class="data-row database-card" href="https://database.wejkey.org" target="_blank" rel="noopener">
+          <div class="hero-card-header">
             <div>
-              <p class="eyebrow">Database</p>
-              <p class="stat">I believe, everything in one place.</p>
+              <p class="eyebrow">You really should</p>
+              <p class="card-title">Check these</p>
             </div>
-            <div class="pill success">Visit</div>
-          </a>
+          </div>
+          <div class="quick-links">
+            <a class="link-row link-row-review" href="https://review.wejkey.org/2025.html" target="_blank" rel="noopener">
+              <div class="row-copy">
+                <p class="eyebrow">New start has begun</p>
+                <p class="row-title">Year review</p>
+              </div>
+              <div class="pill ghost">Visit</div>
+            </a>
+            <a class="link-row link-row-database" href="https://database.wejkey.org" target="_blank" rel="noopener">
+              <div class="row-copy">
+                <p class="eyebrow">Everything in one place</p>
+                <p class="row-title">Database</p>
+              </div>
+              <div class="pill ghost">Visit</div>
+            </a>
+          </div>
         </div>
       </div>
     </section>
