@@ -343,31 +343,43 @@ section {
   pointer-events: none;
 }
 
-.data-row {
+.hero-card-header {
   display: flex;
-  align-items: center;
+  align-items: flex-start;
   justify-content: space-between;
-  margin-bottom: 1rem;
   gap: 1rem;
+  margin-bottom: 1.25rem;
 }
 
-.hero-card .data-row {
-  margin-bottom: 0;
+.card-title {
+  font-size: 1.3rem;
+  font-weight: 800;
+  letter-spacing: -0.01em;
 }
 
-.database-card {
+.quick-links {
+  display: flex;
+  flex-direction: column;
+  gap: 0.9rem;
+}
+
+.link-row {
   text-decoration: none;
   color: inherit;
-  padding: 0.75rem 1rem;
+  padding: 1rem 1.1rem;
   border-radius: 14px;
   border: 1px solid rgba(255, 255, 255, 0.08);
-  background: linear-gradient(135deg, rgba(10, 30, 53, 0.85), rgba(12, 42, 70, 0.8));
   position: relative;
   overflow: hidden;
   transition: transform 0.25s ease, border-color 0.25s ease, box-shadow 0.25s ease;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  gap: 1rem;
+  box-shadow: 0 15px 40px rgba(0, 0, 0, 0.4);
 }
 
-.database-card::after {
+.link-row::after {
   content: '';
   position: absolute;
   inset: 0;
@@ -378,19 +390,39 @@ section {
   transition: opacity 0.3s ease;
 }
 
-.database-card > * {
-  position: relative;
-  z-index: 1;
-}
-
-.database-card:hover {
+.link-row:hover {
   transform: translateY(-3px);
   border-color: rgba(111, 212, 255, 0.45);
   box-shadow: var(--glow);
 }
 
-.database-card:hover::after {
+.link-row:hover::after {
   opacity: 1;
+}
+
+.link-row > * {
+  position: relative;
+  z-index: 1;
+}
+
+.link-row-review {
+  background: linear-gradient(135deg, rgba(29, 35, 66, 0.95), rgba(58, 51, 89, 0.85));
+}
+
+.link-row-database {
+  background: linear-gradient(135deg, rgba(16, 46, 74, 0.92), rgba(19, 68, 84, 0.85));
+}
+
+.row-copy {
+  display: flex;
+  flex-direction: column;
+  gap: 0.1rem;
+}
+
+.row-title {
+  font-size: 1.35rem;
+  font-weight: 800;
+  letter-spacing: -0.01em;
 }
 
 .pill {
@@ -406,6 +438,19 @@ section {
 .pill.success {
   color: #0f1b0f;
   background: linear-gradient(135deg, #8df9d4, #4df2a5);
+}
+
+.pill.ghost {
+  color: var(--text);
+  background: rgba(255, 255, 255, 0.08);
+  border-color: rgba(111, 212, 255, 0.35);
+  box-shadow: inset 0 0 0 1px rgba(255, 255, 255, 0.04);
+}
+
+.pill.ghost:hover {
+  color: var(--bg);
+  background: linear-gradient(135deg, #8df9d4, #4aa8f0);
+  border-color: transparent;
 }
 
 .eyebrow {
