@@ -6,6 +6,9 @@
 - Grammar errors
 - Minor details
 
+## Changed
+- Hero card (aka "Check these")
+
 --------------------------
 
 ## [v2026+1.0.0-beta.5] - December 22, 2025
